--- a/blog/templates/profile.html
+++ b/blog/templates/profile.html
@@ -13,9 +13,9 @@
 	{%for blog in blogs %}
 		<main role="main">
 			<div>
-				<table style="border:3px double #C5C5C5;border-collapse:collapse">
+				<table style="border:2px double #C5C5C5;border-collapse:collapse">
 				<tr>
-					<h4><td width="60" style="text-align:center;border:1px solid #C5C5C5">제목</td><td style="border:1px solid #C5C5C5">{{ blog.title }}</td></h4>
+					<h4><td width="60" style="text-align:center;border:1px solid #C5C5C5">제목</td><td style="border:1px solid #C5C5C5;">{{ blog.title }}</td></h4>
                 </tr>
 				<tr>
 					<h4><td width="60" style="text-align:center;border:1px solid #C5C5C5">작성일</td><td style="border:1px solid #C5C5C5">{{ blog.pub_date }}</td></h4>
@@ -24,10 +24,11 @@
 					<h4><td width="60" style="text-align:center;border:1px solid #C5C5C5">작성자</td><td style="border:1px solid #C5C5C5">{{ blog.writer }}</td></h4>
                 </tr>
 				<tr>
-					<td width="60" style="text-align:center;border:1px solid #C5C5C5">내용</td><td style="border:1px solid #C5C5C5"><p class="lead">{{ blog.content | safe }}</p></td>
+					<td width="60" style="text-align:center;border:1px solid #C5C5C5">내용</td><td style="border:1px solid #C5C5C5"><p class="lead">{{ blog.contents | safe }}</p></td>
                 </tr>
 				</table>
 				<br>
+				<hr>
 			</div>
 		</main>
 	{% endfor %}
